# moremouse

./: .env.example  .gitignore  README.md  environment.gpu03.yml  environment.yml  pyproject.toml
configs/: config.yaml  default.yaml  gpu05.yaml  local.yaml
docs/: README.md  pipeline_overview.md  references.md
reports/: 260521_overall_results.html
scripts/: audit_camera_projection.py  audit_mesh_integrity.py  build_mammal_asset_manifest.py  calibrate_grid_compare.py  calibrate_transforms.py  compare_mesh_candidates.py  comprehensive_eval.py  compute_optimal_transform.py  debug_render.py  evaluate.py  generate_final_report.py  generate_synthetic_data.py  inference.py  install.sh  render_author_level_dense_dataset.py  render_avatar.py  render_mammal_mesh_previews.py  render_markerless_sanity.py  render_single_view_reconstruction.py  reproduce_author_level_moremouse.py  run_paper_scale_pipeline.py  run_pipeline.py  search_mesh_sources.py  setup_env.sh  test_canonical_loader.py  test_canonical_space.py  test_procrustes_transform.py  train.py  train_agam.py  train_dmtet.py  train_full_moremouse.py  train_mesh_prior_ablation.py  train_single_view_mesh_mvp.py  train_tiny_mask_baseline.py  train_triplane_nerf.py  visualize_3d.py
src/: __init__.py
tests/: test_agam.py  test_cameras.py  test_config_loader.py  test_dino_encoder.py  test_dmtet.py  test_fitting_assets.py  test_gaussian_avatar.py  test_geodesic.py  test_geodesic_surface.py  test_manifest.py  test_obj_mesh.py  test_overlay.py  test_triplane_field.py  test_triplane_reconstruction.py  test_video_frames.py  (+2 more)
(+97 files in other folders)
